--- a/CourierSystem/pom.xml
+++ b/CourierSystem/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <packaging>war</packaging>
